--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,10 @@
     <div id="info-panel">
         <h1>Spherical Map</h1>
         <div id="zoom-info">Zoom Level: <span id="current-zoom">1</span></div>
+        <div id="zoom-controls">
+            <button id="zoom-out">-</button>
+            <button id="zoom-in">+</button>
+        </div>
         <div id="s2-cell-info">S2 Cell: <span id="current-s2-cell">-</span></div>
     </div>
     <div id="map-container"></div>
