imports are messed in the vector, might move to json or something
I've added the protobuf code for the data which we download by S2 cell, update rendorVectorTile to actually display edges as lines, with higher priority roads having thicker lines. Render street names over the line if you can, and one ways should have an error in the line.

Do nothing with vertexes, for now

--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,8 @@
     </div>
     <div id="map-container"></div>
     
+    <!-- protobuf-->
+    <script src="//cdn.jsdelivr.net/npm/protobufjs@7.X.X/dist/protobuf.min.js"></script>
     <!-- Include three.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <!-- Include OrbitControls from three.js -->
@@ -25,5 +27,6 @@
     <!-- Include our custom scripts -->
     <script src="js/s2geometry.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/tile_pb.js"></script>
 </body>
 </html>
